--- a/src/app/todos/todos-item/todos-item.component.html
+++ b/src/app/todos/todos-item/todos-item.component.html
@@ -1,1 +1,3 @@
-<p>todos-item works!</p>
+<p (click)="sentTodo($event)">
+    {{todo.title}} <i>{{ todo.completed ? 'Completed' : 'Not Completed' }}</i>
+</p>
