--- a/src/app/todos/todos-list/todos-list.component.html
+++ b/src/app/todos/todos-list/todos-list.component.html
@@ -1,1 +1,5 @@
-<p>todos-list works!</p>
+<ul>
+    <li *ngFor="let todo of todos">
+        <app-todos-item [todo]="todo" (selectedTodo)="onSelectedTodo($event)"></app-todos-item>
+    </li>
+</ul>
